# melo

./: Cargo.toml  Dockerfile  Mayhemfile  README.md
.github/workflows/: sync.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: melo-fuzzer.rs
mayhem/: Dockerfile  Mayhemfile  build.sh  test.sh
mayhem/fuzz/: Cargo.toml
mayhem/fuzz/fuzz_targets/: melo-fuzzer.rs
