[package]
name = "melo-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.melo]
path = "../.."
default-features = false

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "melo-fuzzer"
path = "fuzz_targets/melo-fuzzer.rs"
test = false
doc = false
